# comdb2

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INTERNAL_CONTRIBUTORS.md  LICENSE  Makefile  Makefile.remove  PULL_REQUEST_TEMPLATE.md  README.md  bench  boom  common.mk  dbthread_join.txt  format  full_stack.txt  libs.mk  limbo.txt  main.mk  mem.mk  physreps-todo-list.txt  run_set.sql
archive/: CMakeLists.txt  ar_checksum.c  ar_glue.h  ar_page.h  ar_wrap.c  ar_wrap.h
bdb/: CMakeLists.txt  ack_info.h  add.c  attr.c  attr.h  bdb.c  bdb_access.c  bdb_access.h  bdb_api.h  bdb_blkseq.c  bdb_catchup.c  bdb_cursor.h  bdb_fetch.h  bdb_int.h  bdb_llops.c  bdb_net.c  bdb_net.h  bdb_osql_log_rec.h  bdb_osqlbkfill.c  bdb_osqlbkfill.h  bdb_osqlcur.c  bdb_osqlcur.h  bdb_osqllog.c  bdb_osqllog.h  bdb_osqltrn.c  bdb_osqltrn.h  bdb_queue.h  bdb_queuedb.h  bdb_schemachange.c  bdb_schemachange.h  bdb_sqlstat1.h  bdb_thd_io.c  bdb_verify.c  bdb_verify.h  bdbglue.h  bdblock.c  berktest.c  build_recfiles.sh  callback.c  compact.c  (+62 more)
bdb/DOC/: file_formats  ix_ordering  new_coherency
bdb/TestComdb2RLE/: bigstr  testcrle.c
berkdb/: CMakeLists.txt  LICENSE  module.mk
berkdb/btree/: bt_cache.c  bt_cache.h  bt_compare.c  bt_conv.c  bt_curadj.c  bt_cursor.c  bt_delete.c  bt_method.c  bt_open.c  bt_pf.c  bt_pf.h  bt_pgcompact.c  bt_prefix.c  bt_prefix.h  bt_put.c  bt_rec.c  bt_reclaim.c  bt_recno.c  bt_rsearch.c  bt_search.c  bt_snaprec.c  bt_split.c  bt_stat.c  bt_upgrade.c  bt_verify.c  btree.src
berkdb/clib/: getcwd.c  getopt.c  memcmp.c  memmove.c  raise.c  snprintf.c  strerror.c  vsnprintf.c
berkdb/common/: crypto_stub.c  db_byteorder.c  db_err.c  db_getlong.c  db_idspace.c  db_log2.c  util_arg.c  util_cache.c  util_log.c  util_sig.c
berkdb/crypto/: aes_method.c  crypto.c
berkdb/db/: crdel.src  crdel_rec.c  db.c  db.src  db_am.c  db_cam.c  db_conv.c  db_dispatch.c  db_dup.c  db_iface.c  db_join.c  db_meta.c  db_method.c  db_open.c  db_overflow.c  db_ovfl_vrfy.c  db_pgbless.c  db_pgcompact.c  db_pgdump.c  db_pgutil.c  db_pr.c  db_rec.c  db_reclaim.c  db_remove.c  db_rename.c  db_ret.c  (+8 more)
cdb2api/: CMakeLists.txt  Makefile.win  cdb2_identity.h  cdb2api.c  cdb2api.h  cdb2api.pc  cdb2api_hndl.h  cdb2api_int.h  cdb2api_priv.h  cdb2api_shared_definitions.cmake  cdb2api_ssl_test.c  cdb2api_ssl_test.h  cdb2api_test.h  module.mk
crc32c/: .gitignore  CMakeLists.txt  arm.cmake  crc32c.c  crc32c.h  crc32c_1024.h  sb8.c  sb8.h
csc2/: CMakeLists.txt  csctypes.h  dynschemaload.h  macc.h  macc_so.c  maccglobals.c  macclex.l  maccparse.y  maccprocarr.c  maccwrite2.c  module.mk
cson/: CMakeLists.txt  cson.c  cson.h  cson_amalgamation_core.c  cson_amalgamation_core.h
datetime/: CMakeLists.txt  README  asctime.c  datetime.h  difftime.c  localtimedb.c  private.h  tzfile.h
db/: 1  CMakeLists.txt  alias.c  alias.h  analyze.h  api_history.c  api_history.h  appsock_handler.c  ast.h  async_wait.c  async_wait.h  autoanalyze.c  autoanalyze.h  block_internal.c  block_internal.h  bloomberg.vars  bpfunc.c  bpfunc.h  build-deb-package  build_constants  clienthost.c  clienthost.h  comdb2.c  comdb2.h  comdb2_bootstrap_metadb  comdb2_dbinfo.h  comdb2_info.h  comdb2_legacy.h  comdb2_queue.h  comdb2_rcodes.h  comdb2_ruleset.c  comdb2_shm.h  comdb2_sql.h  comdb2_sql_internal.h  comdb2_trn_intrl.h  comdb2dumpcsc  comdb2util.h  comdb2uuid.c  comdb2uuid.h  compat.c  (+269 more)
dfp/: CMakeLists.txt
dlmalloc/: CMakeLists.txt  dlmalloc.c  dlmalloc.h  dlmalloc_config.h  test.c
lua/: CMakeLists.txt  configure_syssp_c.cmake.in  default_consumer_v1.1.lua  default_consumer_v1.lua  lapi.c  lauxlib.c  lbaselib.c  lcode.c  lcode.h  ldebug.c  ldo.c  linit.c  liolib.c  llex.c  llex.h  lmathlib.c  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lstate.h  lstrlib.c  ltable.c  ltable.h  ltablib.c  ltm.c  ltm.h  ltypes.c  ltypes.h  lua.c  lua.h  lua_fwd_types.h  luaconf.h  luaglue.h  luautil.c  luautil.h  lvm.c  (+10 more)
mem/: CMakeLists.txt  mem.c  mem.h  mem.h.in  mem_override.h  mem_restore.h  mem_subsystems.txt
net/: CMakeLists.txt  akbuf.c  akbuf.h  akbufferevent.c  akbufferevent.h  akq.c  akq.h  event.c  info.c  locks.h  module.mk  net.c  net.h  net_appsock.h  net_evbuffer.c  net_int.h  net_types.h  sqlwriter.c  sqlwriter.h  ssl_evbuffer.c  ssl_evbuffer.h  testnet.c  trace.c
schemachange/: CMakeLists.txt  module.mk  sc_add_table.c  sc_add_table.h  sc_alter_table.c  sc_alter_table.h  sc_callbacks.c  sc_callbacks.h  sc_chain.c  sc_chain.h  sc_csc2.c  sc_csc2.h  sc_delete_table.c  sc_delete_table.h  sc_drop_table.c  sc_drop_table.h  sc_fastinit_table.c  sc_fastinit_table.h  sc_global.c  sc_global.h  sc_import.c  sc_import.h  sc_logic.c  sc_logic.h  sc_lua.c  sc_lua.h  sc_net.c  sc_net.h  sc_queues.c  sc_queues.h  sc_records.c  sc_records.h  sc_rename_table.c  sc_rename_table.h  sc_schema.c  sc_schema.h  sc_sequences.c  sc_sequences.h  sc_stripes.c  sc_stripes.h  (+10 more)
sqlite/: CMakeLists.txt  SECURITY_PATCHSET_3904.md  analyze.c  attach.c  build.c  comdb2build.c  comdb2build.h  comdb2lua.c  comdb2vdbe.c  comdb2vdbe.h  decimal.h  definitions.cmake  delete.c  dttz.c  expr.c  fkey.c  func.c  global.c  insert.c  lemon.c  main.c  md5.c  memjournal.c  mkkeywordhash.c  mkopcodeh.tcl  module.mk  mutex.c  os.h  os_unix.c  parse.y  pragma.c  prepare.c  printf.c  resolve.c  select.c  sqlite.h.in  sqlite3.h  sqliteInt.h  sqliteLimit.h  sqlite_btree.h  (+26 more)
tcl/: CMakeLists.txt  helper.tcl  mem_tcl.h  pkgIndex.tcl  tclcdb2.c  tclcdb2.h
util/: CMakeLists.txt  averager.c  bb_asprintf.c  bb_daemon.c  bb_daemon.h  bb_getopt_long.c  bb_getopt_long.h  bb_oscompat.c  bbhrtime.c  cheapstub.c  comdb2_pthread_create.c  comdb2_walkback.c  comdb2buf.c  comdb2file.c  compat.c  compat.h  consistent_hash.c  ctrace.c  dbg_locks.c  debug_rwlock.c  debug_switches.c  dyn_array.c  dyn_array.h  flibc.c  fsnapf.c  gettimeofday_ms.c  hashfuncs.c  hostname_support.c  import_util.c  import_util.h  int_overflow.c  intern_strings.c  list.c  lockassert.c  locks_wrap.h  logmsg.c  logmsg.h  logrecord.c  logrecord.h  math_util.h  (+59 more)
(+5845 files in other folders)
